# spa

./: .clang-format  .gitignore  README.md  codecov.yml  index.html
Team30/Code30/src/spa/: CMakeLists.txt
Team30/Code30/src/spa/src/: SPA.cpp  SPA.h
Team30/Code30/src/spa/src/program_knowledge_base/: EntityDatabase.cpp  EntityDatabase.h  PKB.cpp  PKB.h  PKBQPSInterface.h  PKBSPInterface.h  PatternDatabase.cpp  PatternDatabase.h  PatternType.cpp  PatternType.h  PkbApi.cpp  PkbApi.h  RelDatabase.cpp  RelDatabase.h  RelTables.cpp  RelationType.cpp  RelationType.h  WildCardMatcher.cpp  WildCardMatcher.h
Team30/Code30/src/spa/src/program_knowledge_base/entities/: EntityDatabase.cpp  EntityDatabase.h
Team30/Code30/src/spa/src/program_knowledge_base/patterns/: PatternDatabase.cpp  PatternDatabase.h
Team30/Code30/src/spa/src/program_knowledge_base/relations/: RelDatabase.cpp  RelDatabase.h
Team30/Code30/src/spa/src/program_knowledge_base/tables/: BaseTable.cpp  BaseTable.h  DictionaryTable.cpp  DictionaryTable.h  EntityTable.cpp  EntityTable.h  FollowsTable.cpp  FollowsTable.h  LinkedListTable.cpp  LinkedListTable.h  ParentsTable.cpp  ParentsTable.h  StmtStmtRelTable.cpp  StmtStmtRelTable.h  UFDSTable.cpp  UFDSTable.h
Team30/Code30/src/spa/src/program_knowledge_base/utils/: AffectsCache.cpp  AffectsCache.h  LinkedList.cpp  (+11 more)
Team30/Code30/src/spa/src/query_processing_system/: QPSController.cpp  QPSController.h  utility.h
Team30/Code30/src/spa/src/shared/: ArrayUtility.cpp  ArrayUtility.h
Team30/Code30/src/spa/src/source_processor/: SpController.cpp  SpController.h
(+1446 files in other folders)
